remake the 10lesson to wrap elements correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     margin-top: 30px;
     box-shadow: 4px 4px 10px 4px gray;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     background-color: #f8f5f5;
 }
 
@@ -15,9 +15,8 @@
 }
 
 .manProfileBox {
-    width: 30%;
-    height: 91%;
-    margin: 19px 0 0 15px;
+    width: 19vw;
+    margin: 15px;
     text-align: center;
 }
 
@@ -47,26 +46,27 @@
 }
 
 .mainInfoBox {
-    width: 64%;
-    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-right: 15px;
     display: flex;
-    flex-flow: column wrap;
-    gap: 20px;
+    flex-grow: 1;
+    flex-direction: column;
+    width: 40vw;
+    gap: 15px;
 }
 
 .countingBox {
     display: flex;
-    align-items: normal;
+    /* align-items: normal; */
     text-align: center;
-    gap: 18px;
-    height: 167px;
-    margin-top: 0;
+    gap: 15px;
+    height: 25vh;
 }
 
 .contribBox {
     display:inline-block;
     flex: 1;
-
 }
 
 .countLabel {
@@ -82,12 +82,17 @@
 }
 
 .aboutManBox {
-    padding: 30px;
-    
+    padding: 30px 30px 0 30px;
+    flex-grow: 1;
 }
 
 .moreAboutLabel {
     font-size: 18px;
     font-weight: 600;
     text-align: center;
+
+}
+
+.manInfoText {
+    font-size: 1em;
 }
